@@ -278,6 +278,10 @@
 				<code>org.eclipse.sirius.diagram.Messages</code> has been renamed to 
 				<code>org.eclipse.sirius.diagram.tools.api.Messages</code>.
 			</li>
+			<li><span class="label label-success">Added</span> Add method 
+				<code>eventShouldTriggerArrange(OperationHistoryEvent)</code> in 
+				<code>org.eclipse.sirius.diagram.business.api.diagramtype.IDiagramDescriptionProvider</code> This method is used to avoid an arrange to be launch for a specific event if it is not necessary for a specific diagram description.
+			</li>
 		</ul>
 		<h4 id="Changesinorg.eclipse.sirius.diagram.model">Changes in 
 			<code>org.eclipse.sirius.diagram.model</code>
